# progressive-scalar-topology

./: README.md
scripts/: benchs_cp.sh  benchs_pd.sh  fig15.sh  generateTable3.py  generateTables2And3.py  generateTables2And4.py  tableOutput.tex
src/: CMakeLists.txt  functions.cmake
src/core/: CMakeLists.txt  functions.cmake
src/core/base/: TTKBaseConfig.cmake.in  functions.cmake
src/core/base/dynamicTree/: CMakeLists.txt  DynamicTree.h
src/core/base/multiresTriangulation/: CMakeLists.txt  MultiresTriangulation.cpp  MultiresTriangulation.h
src/core/base/persistenceDiagram/: CMakeLists.txt  PersistenceDiagram.cpp  PersistenceDiagram.h
src/core/base/scalarFieldCriticalPoints/: CMakeLists.txt  ScalarFieldCriticalPoints.cpp  ScalarFieldCriticalPoints.h
src/core/vtk/ttkPersistenceDiagram/: ttkPersistenceDiagram.cpp  ttkPersistenceDiagram.h
src/core/vtk/ttkScalarFieldCriticalPoints/: ttkScalarFieldCriticalPoints.cpp  ttkScalarFieldCriticalPoints.h
src/standalone/PersistenceDiagram/cmd/: main.cpp
src/standalone/ScalarFieldCriticalPoints/cmd/: main.cpp
